--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
